--- a/EasyBank/Views/Error/OperationError.cshtml
+++ b/EasyBank/Views/Error/OperationError.cshtml
@@ -1,41 +1,20 @@
 ﻿@model EasyBank.Models.ErrorReport
-@{
-    Layout = null;
-}
-<!DOCTYPE html>
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>@Resources.Resource.OperationError</title>
-    <script src="~/Scripts/jquery-1.8.2.js"></script>
-    <script>
-        $(document).ready(function () {
-            $("#submitButton").click(function () {
-                debugger;
-                errorCode = @ViewBag.ErrorCode
-                $("#text").val("Error code: " + errorCode.toString() + " \n " + $("#text").val());
-            });
-        });
-    </script>
-</head>
-<body>
-    <div>
-        <h1> @Resources.Resource.OperationError </h1>
-        <h3> @Resources.Resource.ErrorCode: @ViewBag.ErrorCode</h3>
-        <h4> @Resources.Resource.OperationErrorMessage</h4>
-        <h2>@Resources.Resource.DescribeTheProblem</h2>
-        <form method="post" action="OperationError">
-            <fieldset>
-                @* @Html.EditorForModel(Model); *@
-                <br />     @Resources.Resource.TypeTheText     <br />
-                <textarea name="Text" rows="10" cols="40" id="text"></textarea>
-                <br />
-                <br />
-                @Html.HiddenFor(model => model.AccountId)
 
-                <input type="submit" value=@Resources.Resource.SubmitEntry id="submitButton"/>
-            </fieldset>
-        </form>
-    </div>
-</body>
-</html>
+<div>
+    <h1>@Resources.Resource.OperationError </h1>
+    <br/>
+    <font size="5">@Resources.Resource.ErrorCode: @ViewBag.ErrorCode</font>
+    <h3>@Resources.Resource.DescribeTheProblem</h3>
+    <form method="post" action="OperationError">
+        <fieldset>
+            <br />
+            <textarea name="Text" rows="10" cols="40" id="text"></textarea>
+            <br />
+            <br />
+            @Html.HiddenFor(model => model.AccountId)
+
+            <input type="submit" value=@Resources.Resource.SubmitEntry id="submitButton"/>
+        </fieldset>
+    </form>
+</div>
+
