--- a/EasyBank/Views/Account/ShowClientPhoto.cshtml
+++ b/EasyBank/Views/Account/ShowClientPhoto.cshtml
@@ -1,13 +1,12 @@
 ﻿@model EasyBank.Models.ClientsImage
-<h2>@Resources.Resource.ClientsPhotoTitle</h2>
 
 @{
-    ViewBag.Title = @Resources.Resource.ClientsPhotoTitle;
+    ViewBag.Title = @Resources.Resource.ClientsPassport;
 }
 
 @if (Model == null )
 {  
-        <h2>@Resources.Resource.NoPhoto</h2> 
+       <div style="padding-left: 20px;padding-top: 55px">@Resources.Resource.NoPhoto</div>
 } 
 else
 {
