--- a/EasyBank/Views/Operation/AddMoney.cshtml
+++ b/EasyBank/Views/Operation/AddMoney.cshtml
@@ -123,8 +123,9 @@
         </tr>
     </table>
 </fieldset>
+<br/>
 
-<p><b>Add Funds</b></p>
+<h4>Add Funds</h4>
 @using (Html.BeginForm("AddMoney", "Operation", FormMethod.Post, new { @Id = "submitForm" }))
 {
     @Html.ValidationSummary(true)
@@ -133,12 +134,13 @@
     @Html.HiddenFor(model => model.ClientId)
     <div class="editor-field">
         @Html.EditorFor(model => model.Amount)
-        @Html.ValidationMessageFor(model => model.Amount)
-
-        @{
+        
+         @{
     List<SelectListItem> itemList = ViewBag.itemList;
         }
         @Html.DropDownList("CurrencyName", itemList)
+
+        @Html.ValidationMessageFor(model => model.Amount)
 
     </div>
 
