--- a/EasyBank/Views/Protected/ClientsProfile.cshtml
+++ b/EasyBank/Views/Protected/ClientsProfile.cshtml
@@ -193,7 +193,7 @@
             <tr>
                 <th>@Html.Label(@Resources.Resource.AccNumb) </th>
                 <th>@Html.Label(@Resources.Resource.ExpDate) </th>
-                <th>@Html.Label(@Resources.Resource.AvailableAmount)</th>
+                <th>@Html.Label(@Resources.Resource.Amount)</th>
                 <th>@Html.Label(@Resources.Resource.Currency)</th>
                 <th>@Html.Label(@Resources.Resource.Type)</th>
                 <th>@Html.Label(@Resources.Resource.Status)</th>
@@ -219,7 +219,7 @@
                 </td>
                 <td>
                     <div class="display-field">
-                        @if(item.TypeId == 2)
+                        @if(item.TypeId != 1)
                             {
                                 @Html.DisplayFor(modelItem => item.AvailableAmount)
                             }
