--- a/EasyBank/Views/Protected/CurrencyList.cshtml
+++ b/EasyBank/Views/Protected/CurrencyList.cshtml
@@ -2,6 +2,11 @@
 @{
     ViewBag.Title = @Resources.Resource.CurrencyList;
 }
+
+<script src="~/Scripts/jquery-1.8.2.min.js"></script>
+<script src="~/Scripts/jquery.validate.min.js"></script>
+<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+
 <h2>@Html.Label(@Resources.Resource.Currencies)</h2>
 
 <fieldset>
