--- a/EasyBank/Views/Operation/TotalDepositedAmount.cshtml
+++ b/EasyBank/Views/Operation/TotalDepositedAmount.cshtml
@@ -28,8 +28,8 @@
 <br />
 
 @Html.Action("TotalCreditedAmount")
-@Html.Action("TotalDepositInterests")
-@Html.Action("TotalCreditInterests")
+@*@Html.Action("TotalDepositInterests")
+@Html.Action("TotalCreditInterests")*@
 @Html.Action("ProfitPlanningCalc")
 @Html.Action("ProfitCalc")
 
