--- a/EasyBank/Views/Account/ClientsProfile.cshtml
+++ b/EasyBank/Views/Account/ClientsProfile.cshtml
@@ -151,12 +151,12 @@
         @if (Model.Accounts.Count() != 0)
         {
             <tr>
-                <td>@Html.ActionLink(@Resources.Resource.AccNumb, "ClientsProfile", new { id = Model.ClientId, sort = ViewBag.AccountNumberSort })</td>
-                <td>@Html.ActionLink(@Resources.Resource.ExpDate, "ClientsProfile", new { id = Model.ClientId, sort = ViewBag.ExpirationDateSort })</td>
-                <td>@Html.ActionLink(@Resources.Resource.Amount, "ClientsProfile", new { id = Model.ClientId, sort = ViewBag.AmountSort })</td>
-                <td>@Html.ActionLink(@Resources.Resource.Currency, "ClientsProfile", new { id = Model.ClientId, sort = ViewBag.CurrencySort })</td>
-                <td>@Html.ActionLink(@Resources.Resource.Type, "ClientsProfile", new { id = Model.ClientId, sort = ViewBag.TypeSort })</td>
-                <td>@Html.ActionLink(@Resources.Resource.Status, "ClientsProfile", new { id = Model.ClientId, sort = ViewBag.StatusSort })</td>
+                <td>@Html.ActionLink(@Resources.Resource.AccNumb, "ClientsProfile", new { sort = ViewBag.AccountNumberSort })</td>
+                <td>@Html.ActionLink(@Resources.Resource.ExpDate, "ClientsProfile", new { sort = ViewBag.ExpirationDateSort })</td>
+                <td>@Html.ActionLink(@Resources.Resource.Amount, "ClientsProfile", new { sort = ViewBag.AmountSort })</td>
+                <td>@Html.ActionLink(@Resources.Resource.Currency, "ClientsProfile", new { sort = ViewBag.CurrencySort })</td>
+                <td>@Html.ActionLink(@Resources.Resource.Type, "ClientsProfile", new { sort = ViewBag.TypeSort })</td>
+                <td>@Html.ActionLink(@Resources.Resource.Status, "ClientsProfile", new { sort = ViewBag.StatusSort })</td>
             </tr>
         }
         else
@@ -198,7 +198,7 @@
                     </div>
                 </td>
             </tr>
-        
+
         }
     </table>
     <a href="#" id="transferButton">@Resources.Resource.TransMoney</a>
