--- a/EasyBank/Views/Shared/_Layout.cshtml
+++ b/EasyBank/Views/Shared/_Layout.cshtml
@@ -52,8 +52,8 @@
 @*<li>@Html.ActionLink(@Resources.Resource.Details, "ClientsProfile", "Protected", new {clientId = WebSecurity.GetUserId(User.Identity.Name) })</li>*@
 @*<li>@Html.ActionLink(@Resources.Resource.Details, "ClientsProfile", "Protected")</li>*@
 @* <li>@Html.ActionLink(@Resources.Resource.Details, "ClientsProfile", "Account", new { clientId = WebSecurity.GetUserId(User.Identity.Name) }, htmlAttributes: new { clientId = WebSecurity.GetUserId(User.Identity.Name) })</li>*@
-                            <li>@Html.ActionLink(@Resources.Resource.Details, "ClientsProfile", "Account", new { id = WebSecurity.CurrentUserId }, null)</li>
-                            <li>@Html.ActionLink(@Resources.Resource.BankProducts, "DepositList", "Account", new { id = WebSecurity.CurrentUserId }, null)</li>
+                            <li>@Html.ActionLink(@Resources.Resource.Details, "ClientsProfile", "Account")</li>
+                            <li>@Html.ActionLink(@Resources.Resource.BankProducts, "DepositList", "Account")</li>
                         }
                         @if (User.IsInRole("Operator"))
                         {
