--- a/EasyBank/Views/Protected/ClientsProfile.cshtml
+++ b/EasyBank/Views/Protected/ClientsProfile.cshtml
@@ -39,7 +39,7 @@
                 else if (parms[1] == "Deposit") {
                     $("#payInButton").css("display", "inline-block");
                     $("#payOutButton").css("display", "inline-block");
-                    $("#transferButton").css("display", "inline-block");
+                    $("#transferButton").css("display", "none");
                 }
                 else if (parms[1] == "Normal") {
                     $("#payInButton").css("display", "inline-block");
