--- a/EasyBank/Views/Account/RegisterOperator.cshtml
+++ b/EasyBank/Views/Account/RegisterOperator.cshtml
@@ -1,4 +1,9 @@
 ﻿@model EasyBank.Models.Operator
+
+<script src="~/Scripts/jquery-1.8.2.min.js"></script>
+<script src="~/Scripts/jquery.validate.min.js"></script>
+<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+
 <h2>@Html.Label(@Resources.Resource.RegisterOperator)</h2>
 <br />
 
