--- a/EasyBank/Views/Office/AddDepositCredit.cshtml
+++ b/EasyBank/Views/Office/AddDepositCredit.cshtml
@@ -1,10 +1,26 @@
 ﻿@model EasyBank.Models.DepositCreditModel
+
+<script src="~/Scripts/jquery-1.8.2.min.js"></script>
+<script src="~/Scripts/jquery.validate.min.js"></script>
+<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+
+<script>
+    $(document).ready(function () {
+        $("#AccountTypeId").change(function () {
+            if ($("#AccountTypeId").val() == 3) {
+                $("div #earlyTermination").css("opacity", 0);
+            }
+            else $("div #earlyTermination").css("opacity", 1);
+        });
+    });
+</script>
+
 <h2>@Html.Label(@Resources.Resource.AddBankProduct)</h2>
 <br />
 @Html.ActionLink(@Resources.Resource.Back, "DepositList", "Office")
 <br />
 <br />
-  
+
 @using (Html.BeginForm("AddDepositCredit", "Office", FormMethod.Post))
 {
     @Html.AntiForgeryToken()
@@ -12,7 +28,7 @@
     
     <fieldset>
         <legend>Create new bank product</legend>
-        
+
         <div class=" editor-label">
             @Html.LabelFor(model => model.AccountType)
         </div>
@@ -27,7 +43,7 @@
         @Html.DropDownListFor(model => model.AccountTypeId, listType)
 
 
-      @*  <div class=" editor-label">
+        @*  <div class=" editor-label">
             @Html.LabelFor(model => model.AccountType)
         </div>
         <div class="editor-field">
@@ -59,12 +75,14 @@
             @Html.ValidationMessageFor(model => model.InterestRate)
         </div>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.EarlyTermination)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.EarlyTermination)
-            @Html.ValidationMessageFor(model => model.EarlyTermination)
+        <div id="earlyTermination">
+            <div class="editor-label">
+                @Html.LabelFor(model => model.EarlyTermination)
+            </div>
+            <div class="editor-field">
+                @Html.EditorFor(model => model.EarlyTermination)
+                @Html.ValidationMessageFor(model => model.EarlyTermination)
+            </div>
         </div>
 
         <p>
@@ -72,4 +90,4 @@
         </p>
     </fieldset>
 }
-        
+
