Translated some atributs and e-mail message

--- a/EasyBank/Views/Account/Login.cshtml
+++ b/EasyBank/Views/Account/Login.cshtml
@@ -21,12 +21,14 @@
         <legend>Log in Form</legend>
         <ol>
             <li>
-                @Html.LabelFor(m => m.UserName)
+                @Resources.Resource.UserName
+                <br />
                 @Html.TextBoxFor(m => m.UserName)
                 @Html.ValidationMessageFor(m => m.UserName)
             </li>
             <li>
-                @Html.LabelFor(m => m.Password)
+                @Resources.Resource.Password
+                <br />
                 @Html.PasswordFor(m => m.Password)
                 @Html.ValidationMessageFor(m => m.Password)
             </li>
