--- a/EasyBank/Views/Account/Register.cshtml
+++ b/EasyBank/Views/Account/Register.cshtml
@@ -113,7 +113,7 @@
         </div>*@
 
         <label for=" file">@Resources.Resource.UploadPassportScan:</label>
-        <input type="file" name="file" id="file" accept="image/jpeg,image/png" style="width: 100%;" value="@Resources.Resource.ChooseFile" />
+        <input type="file" name="file" id="file" accept="image/jpeg,image/png" style="width: 100%;" value=@Resources.Resource.ChooseFile />
 
         <p>
             <input type="submit" value=@Resources.Resource.Create class="submit" />
