--- a/EasyBank/Views/Office/DepositList.cshtml
+++ b/EasyBank/Views/Office/DepositList.cshtml
@@ -9,7 +9,7 @@
 <br/>
 <table>
     <tr>
-        <th>
+        <th style="width: 130px">
             @Resources.Resource.DepositName
         </th>
         <th>
@@ -30,10 +30,10 @@
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Duration)
+                @Html.DisplayFor(modelItem => item.Duration) mon.
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.InterestRate)
+                @Html.DisplayFor(modelItem => item.InterestRate) %
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.EarlyTermination)
