--- a/EasyBank/Views/Account/DepositList.cshtml
+++ b/EasyBank/Views/Account/DepositList.cshtml
@@ -3,7 +3,7 @@
 <br />
 <table>
     <tr>
-        <th>
+        <th style="width: 130px">
             @Resources.Resource.DepositName
         </th>
         <th>
@@ -24,10 +24,10 @@
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Duration)
+                @Html.DisplayFor(modelItem => item.Duration) mon.
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.InterestRate)
+                @Html.DisplayFor(modelItem => item.InterestRate) %
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.EarlyTermination)
