--- a/EasyBank/Views/Protected/ClientsProfile.cshtml
+++ b/EasyBank/Views/Protected/ClientsProfile.cshtml
@@ -106,7 +106,7 @@
         <table>
             <tr>
                 <td>
-                    @Html.DisplayNameFor(model => model.Name)
+                   <b> @Html.DisplayNameFor(model => model.Name)</b>
                 </td>
                 <td>
                     <div class="display-field">
@@ -117,7 +117,7 @@
 
             <tr>
                 <td>
-                    @Html.DisplayNameFor(model => model.Surname)
+                   <b>@Html.DisplayNameFor(model => model.Surname)</b>
                 </td>
                 <td>
                     <div class="display-field">
@@ -128,7 +128,7 @@
 
             <tr>
                 <td>
-                    @Html.DisplayNameFor(model => model.Email)
+                    <b>  @Html.DisplayNameFor(model => model.Email)</b>
                 </td>
                 <td>
                     <div class="display-field">
@@ -139,7 +139,7 @@
 
             <tr>
                 <td>
-                    @Html.DisplayNameFor(model => model.BirthDate)
+                    <b> @Html.DisplayNameFor(model => model.BirthDate)</b>
                 </td>
                 <td>
                     <div class="display-field">
@@ -150,7 +150,7 @@
 
             <tr>
                 <td>
-                    @Html.DisplayNameFor(model => model.PIdNumber)
+                    <b> @Html.DisplayNameFor(model => model.PIdNumber)</b>
                 </td>
                 <td>
                     <div class="display-field">
@@ -161,7 +161,7 @@
 
             <tr>
                 <td>
-                    @Html.DisplayNameFor(model => model.RegistrationDate)
+                    <b> @Html.DisplayNameFor(model => model.RegistrationDate)</b>
                 </td>
                 <td>
                     <div class="display-field">
