--- a/EasyBank/Views/Protected/CurrencyList.cshtml
+++ b/EasyBank/Views/Protected/CurrencyList.cshtml
@@ -8,7 +8,7 @@
 <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
 
 <section id="loginForm">
-    <h2>@Html.Label(@Resources.Resource.Currencies)</h2>
+    <h2>@Html.Label(@Resources.Resource.AddCurrency)</h2>
     <fieldset>
         @using (Html.BeginForm("AddCurrency", "Protected", FormMethod.Post))
         {
